--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -224,11 +224,11 @@
             <objects>
                 <viewController storyboardIdentifier="CookingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5D0-uI-zY1" customClass="CookingViewController" customModule="YumFun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xJt-QE-aRp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7eB-yk-vvr">
-                                <rect key="frame" x="10" y="78" width="394" height="696"/>
+                                <rect key="frame" x="10" y="155" width="394" height="707"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wMc-Wh-4gN">
                                     <size key="itemSize" width="394" height="115"/>
@@ -343,11 +343,11 @@
                                 </cells>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ysQ-BP-aVa">
-                                <rect key="frame" x="270" y="721" width="124" height="30"/>
+                                <rect key="frame" x="270" y="809" width="124" height="30"/>
                                 <state key="normal" title="Hands-Free Mode"/>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VWo-O5-COP">
-                                <rect key="frame" x="10" y="20" width="394" height="50"/>
+                                <rect key="frame" x="10" y="97" width="394" height="50"/>
                                 <color key="backgroundColor" red="0.84213569929999998" green="0.9703433923" blue="0.64462788090000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="f3h-eq-NJz"/>
@@ -387,22 +387,28 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kd-cb-ogW">
+                                <rect key="frame" x="354" y="59" width="40" height="30"/>
+                                <state key="normal" title="Leave"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3x6-St-Xxb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VWo-O5-COP" firstAttribute="top" secondItem="3x6-St-Xxb" secondAttribute="top" constant="20" id="2it-Vl-NsP"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="ysQ-BP-aVa" secondAttribute="trailing" constant="20" id="3Gs-d9-bhT"/>
                             <constraint firstItem="7eB-yk-vvr" firstAttribute="top" secondItem="VWo-O5-COP" secondAttribute="bottom" constant="8" symbolic="YES" id="7c3-tU-ntE"/>
+                            <constraint firstItem="9kd-cb-ogW" firstAttribute="top" secondItem="3x6-St-Xxb" secondAttribute="top" constant="15" id="F09-d0-u2B"/>
                             <constraint firstItem="VWo-O5-COP" firstAttribute="leading" secondItem="3x6-St-Xxb" secondAttribute="leading" constant="10" id="SQi-sE-snm"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="7eB-yk-vvr" secondAttribute="trailing" constant="10" id="Tta-V5-yac"/>
+                            <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="9kd-cb-ogW" secondAttribute="trailing" constant="20" id="VJq-am-jLr"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="bottom" secondItem="ysQ-BP-aVa" secondAttribute="bottom" constant="23" id="cMT-ao-y7V"/>
+                            <constraint firstItem="VWo-O5-COP" firstAttribute="top" secondItem="9kd-cb-ogW" secondAttribute="bottom" constant="8" symbolic="YES" id="nUN-pW-dUi"/>
                             <constraint firstItem="7eB-yk-vvr" firstAttribute="bottom" secondItem="3x6-St-Xxb" secondAttribute="bottom" id="nzH-1b-WwM"/>
                             <constraint firstItem="7eB-yk-vvr" firstAttribute="leading" secondItem="3x6-St-Xxb" secondAttribute="leading" constant="10" id="rmf-nK-vEN"/>
                             <constraint firstItem="3x6-St-Xxb" firstAttribute="trailing" secondItem="VWo-O5-COP" secondAttribute="trailing" constant="10" id="yEI-yt-MSh"/>
                         </constraints>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="avatarCollectionView" destination="VWo-O5-COP" id="dgD-uA-fbb"/>
                         <outlet property="stepCollectionView" destination="7eB-yk-vvr" id="cJC-Mi-75Y"/>
@@ -429,6 +435,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U8L-3n-ekM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="334.78260869565219" y="-13.392857142857142"/>
+        </scene>
+        <!--Step Detail View Controller-->
+        <scene sceneID="qCb-JH-4IF">
+            <objects>
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="yr3-gZ-8Lp" customClass="StepDetailViewController" customModule="YumFun" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3dz-cW-PAE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CPe-rG-Q0k">
+                                <rect key="frame" x="0.0" y="28" width="414" height="774"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lqt-i4-kzC">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="775"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJT-UI-qNP">
+                                                <rect key="frame" x="346" y="4" width="48" height="30"/>
+                                                <state key="normal" title="Cancel"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MhZ-wC-Nf2">
+                                                <rect key="frame" x="20" y="40" width="48.5" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rOV-ck-5hY">
+                                                <rect key="frame" x="20" y="81" width="374" height="24"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22V-ae-EuG">
+                                                <rect key="frame" x="20" y="113" width="374" height="81.5"/>
+                                                <string key="text">Here is some general description of the recipe. Here is some general description of the recipe. Here is some general description of the recipe. Here is some general description of the recipe.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="rOV-ck-5hY" firstAttribute="top" secondItem="MhZ-wC-Nf2" secondAttribute="bottom" constant="20" id="5th-nW-tRN"/>
+                                            <constraint firstItem="MhZ-wC-Nf2" firstAttribute="top" secondItem="Lqt-i4-kzC" secondAttribute="top" constant="40" id="8Js-qg-ge1"/>
+                                            <constraint firstItem="22V-ae-EuG" firstAttribute="trailing" secondItem="rOV-ck-5hY" secondAttribute="trailing" id="NBF-9A-an3"/>
+                                            <constraint firstItem="22V-ae-EuG" firstAttribute="top" secondItem="rOV-ck-5hY" secondAttribute="bottom" constant="8" symbolic="YES" id="TH3-rl-ZiU"/>
+                                            <constraint firstAttribute="trailing" secondItem="IJT-UI-qNP" secondAttribute="trailing" constant="20" symbolic="YES" id="W6u-S0-LRb"/>
+                                            <constraint firstItem="MhZ-wC-Nf2" firstAttribute="leading" secondItem="Lqt-i4-kzC" secondAttribute="leading" constant="20" symbolic="YES" id="Y5F-tl-Rdh"/>
+                                            <constraint firstItem="22V-ae-EuG" firstAttribute="leading" secondItem="rOV-ck-5hY" secondAttribute="leading" id="qp1-g6-yl9"/>
+                                            <constraint firstAttribute="trailing" secondItem="rOV-ck-5hY" secondAttribute="trailing" constant="20" id="vt9-TT-dRR"/>
+                                            <constraint firstItem="rOV-ck-5hY" firstAttribute="leading" secondItem="Lqt-i4-kzC" secondAttribute="leading" constant="20" symbolic="YES" id="wAT-WZ-tlu"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Lqt-i4-kzC" firstAttribute="leading" secondItem="a0H-9D-GM0" secondAttribute="leading" id="0P6-sp-aEj"/>
+                                    <constraint firstItem="Lqt-i4-kzC" firstAttribute="width" secondItem="KWY-Oj-mrg" secondAttribute="width" id="8vf-zw-8LQ"/>
+                                    <constraint firstItem="Lqt-i4-kzC" firstAttribute="bottom" secondItem="a0H-9D-GM0" secondAttribute="bottom" id="Zet-BN-Ym8"/>
+                                    <constraint firstItem="Lqt-i4-kzC" firstAttribute="trailing" secondItem="a0H-9D-GM0" secondAttribute="trailing" id="bkx-sK-H5m"/>
+                                    <constraint firstItem="Lqt-i4-kzC" firstAttribute="top" secondItem="a0H-9D-GM0" secondAttribute="top" id="nbN-1B-ozN"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="a0H-9D-GM0"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="KWY-Oj-mrg"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Nw5-ds-dR9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="leading" secondItem="Nw5-ds-dR9" secondAttribute="leading" id="3tv-Lf-zc8"/>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" id="Nnv-Hh-F3E"/>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" id="TlZ-r4-Iy8"/>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="trailing" secondItem="Nw5-ds-dR9" secondAttribute="trailing" id="WUS-FJ-y6R"/>
+                            <constraint firstItem="IJT-UI-qNP" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" constant="20" id="e6J-GL-3Cb"/>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="bottom" secondItem="Nw5-ds-dR9" secondAttribute="bottom" id="juu-Kd-JP4"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gJT-It-Jwh"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="contentView" destination="Lqt-i4-kzC" id="yh0-Pv-ZCs"/>
+                        <outlet property="scrollView" destination="CPe-rG-Q0k" id="ZHz-MD-v5c"/>
+                        <outlet property="stepDescrip" destination="22V-ae-EuG" id="U6M-3w-MNH"/>
+                        <outlet property="stepTitle" destination="rOV-ck-5hY" id="4uI-bm-XN2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rRa-md-9mR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2788" y="-13"/>
         </scene>
     </scenes>
     <resources>
