--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -390,6 +390,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9kd-cb-ogW">
                                 <rect key="frame" x="354" y="59" width="40" height="30"/>
                                 <state key="normal" title="Leave"/>
+                                <connections>
+                                    <action selector="leavePressed" destination="5D0-uI-zY1" eventType="touchUpInside" id="5el-NW-B27"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3x6-St-Xxb"/>
@@ -439,36 +442,19 @@
         <!--Step Detail View Controller-->
         <scene sceneID="qCb-JH-4IF">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="yr3-gZ-8Lp" customClass="StepDetailViewController" customModule="YumFun" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StepDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yr3-gZ-8Lp" customClass="StepDetailViewController" customModule="YumFun" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3dz-cW-PAE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CPe-rG-Q0k">
-                                <rect key="frame" x="0.0" y="28" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="100" width="414" height="702"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lqt-i4-kzC">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="775"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJT-UI-qNP">
-                                                <rect key="frame" x="346" y="4" width="48" height="30"/>
-                                                <state key="normal" title="Cancel"/>
-                                            </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MhZ-wC-Nf2">
                                                 <rect key="frame" x="20" y="40" width="48.5" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rOV-ck-5hY">
-                                                <rect key="frame" x="20" y="81" width="374" height="24"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22V-ae-EuG">
-                                                <rect key="frame" x="20" y="113" width="374" height="81.5"/>
-                                                <string key="text">Here is some general description of the recipe. Here is some general description of the recipe. Here is some general description of the recipe. Here is some general description of the recipe.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -476,15 +462,8 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="rOV-ck-5hY" firstAttribute="top" secondItem="MhZ-wC-Nf2" secondAttribute="bottom" constant="20" id="5th-nW-tRN"/>
                                             <constraint firstItem="MhZ-wC-Nf2" firstAttribute="top" secondItem="Lqt-i4-kzC" secondAttribute="top" constant="40" id="8Js-qg-ge1"/>
-                                            <constraint firstItem="22V-ae-EuG" firstAttribute="trailing" secondItem="rOV-ck-5hY" secondAttribute="trailing" id="NBF-9A-an3"/>
-                                            <constraint firstItem="22V-ae-EuG" firstAttribute="top" secondItem="rOV-ck-5hY" secondAttribute="bottom" constant="8" symbolic="YES" id="TH3-rl-ZiU"/>
-                                            <constraint firstAttribute="trailing" secondItem="IJT-UI-qNP" secondAttribute="trailing" constant="20" symbolic="YES" id="W6u-S0-LRb"/>
                                             <constraint firstItem="MhZ-wC-Nf2" firstAttribute="leading" secondItem="Lqt-i4-kzC" secondAttribute="leading" constant="20" symbolic="YES" id="Y5F-tl-Rdh"/>
-                                            <constraint firstItem="22V-ae-EuG" firstAttribute="leading" secondItem="rOV-ck-5hY" secondAttribute="leading" id="qp1-g6-yl9"/>
-                                            <constraint firstAttribute="trailing" secondItem="rOV-ck-5hY" secondAttribute="trailing" constant="20" id="vt9-TT-dRR"/>
-                                            <constraint firstItem="rOV-ck-5hY" firstAttribute="leading" secondItem="Lqt-i4-kzC" secondAttribute="leading" constant="20" symbolic="YES" id="wAT-WZ-tlu"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -499,30 +478,38 @@
                                 <viewLayoutGuide key="contentLayoutGuide" id="a0H-9D-GM0"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="KWY-Oj-mrg"/>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wld-SK-Qxr">
+                                <rect key="frame" x="341" y="59" width="53" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelPressed" destination="yr3-gZ-8Lp" eventType="touchUpInside" id="DeN-PD-6VG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Nw5-ds-dR9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="CPe-rG-Q0k" firstAttribute="leading" secondItem="Nw5-ds-dR9" secondAttribute="leading" id="3tv-Lf-zc8"/>
-                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" id="Nnv-Hh-F3E"/>
+                            <constraint firstItem="CPe-rG-Q0k" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" constant="30" id="Nnv-Hh-F3E"/>
                             <constraint firstItem="CPe-rG-Q0k" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" id="TlZ-r4-Iy8"/>
                             <constraint firstItem="CPe-rG-Q0k" firstAttribute="trailing" secondItem="Nw5-ds-dR9" secondAttribute="trailing" id="WUS-FJ-y6R"/>
-                            <constraint firstItem="IJT-UI-qNP" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" constant="20" id="e6J-GL-3Cb"/>
+                            <constraint firstItem="wld-SK-Qxr" firstAttribute="top" secondItem="Nw5-ds-dR9" secondAttribute="top" constant="15" id="Xt7-17-tBZ"/>
                             <constraint firstItem="CPe-rG-Q0k" firstAttribute="bottom" secondItem="Nw5-ds-dR9" secondAttribute="bottom" id="juu-Kd-JP4"/>
+                            <constraint firstItem="Nw5-ds-dR9" firstAttribute="trailing" secondItem="wld-SK-Qxr" secondAttribute="trailing" constant="20" id="skv-qF-aeC"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gJT-It-Jwh"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
-                        <outlet property="contentView" destination="Lqt-i4-kzC" id="yh0-Pv-ZCs"/>
-                        <outlet property="scrollView" destination="CPe-rG-Q0k" id="ZHz-MD-v5c"/>
-                        <outlet property="stepDescrip" destination="22V-ae-EuG" id="U6M-3w-MNH"/>
-                        <outlet property="stepTitle" destination="rOV-ck-5hY" id="4uI-bm-XN2"/>
+                        <outlet property="cancelButton" destination="wld-SK-Qxr" id="ym6-y9-BPY"/>
+                        <outlet property="contentView" destination="Lqt-i4-kzC" id="Zvt-xC-avG"/>
+                        <outlet property="timerLabel" destination="MhZ-wC-Nf2" id="25b-Su-Dio"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rRa-md-9mR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2788" y="-13"/>
+            <point key="canvasLocation" x="2928.985507246377" y="-13.392857142857142"/>
         </scene>
     </scenes>
     <resources>
