--- a/YumFun/YumFun/Views/Base.lproj/Main.storyboard
+++ b/YumFun/YumFun/Views/Base.lproj/Main.storyboard
@@ -948,22 +948,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="vpi-Bz-vDj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="VZw-0r-XwM"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="USi-hF-cFT">
-                                <rect key="frame" x="0.0" y="44" width="380" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="usercell" rowHeight="90" id="Z6X-tu-quw" customClass="UserCell" customModule="YumFun" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="380" height="90"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z6X-tu-quw" id="ixK-Tp-8ea">
-                                            <rect key="frame" x="0.0" y="0.0" width="380" height="90"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Goopy" translatesAutoresizingMaskIntoConstraints="NO" id="5K5-Vd-dqD">
@@ -974,13 +967,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this is a one sentence bio and more bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDq-so-tAG">
-                                                    <rect key="frame" x="100" y="58" width="264" height="21"/>
+                                                    <rect key="frame" x="100" y="58" width="259" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aV-Qb-eK6">
-                                                    <rect key="frame" x="100" y="20" width="94" height="24"/>
+                                                    <rect key="frame" x="100" y="20" width="93.5" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1011,23 +1004,19 @@
                         <viewLayoutGuide key="safeArea" id="RcB-5v-cB5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="USi-hF-cFT" firstAttribute="bottom" secondItem="RcB-5v-cB5" secondAttribute="bottom" id="5R3-fQ-rk3"/>
-                            <constraint firstItem="vpi-Bz-vDj" firstAttribute="leading" secondItem="RcB-5v-cB5" secondAttribute="leading" id="S3a-CB-kEn"/>
-                            <constraint firstItem="USi-hF-cFT" firstAttribute="top" secondItem="vpi-Bz-vDj" secondAttribute="bottom" id="VUx-YL-a0X"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="USi-hF-cFT" secondAttribute="trailing" constant="-21" id="Wod-8j-x44"/>
-                            <constraint firstItem="vpi-Bz-vDj" firstAttribute="centerX" secondItem="1lL-eN-E24" secondAttribute="centerX" id="oK9-Nj-P61"/>
-                            <constraint firstItem="vpi-Bz-vDj" firstAttribute="leading" secondItem="USi-hF-cFT" secondAttribute="leading" id="qR7-YP-UVj"/>
-                            <constraint firstItem="vpi-Bz-vDj" firstAttribute="top" secondItem="RcB-5v-cB5" secondAttribute="top" id="xUq-v6-tfR"/>
+                            <constraint firstItem="USi-hF-cFT" firstAttribute="top" secondItem="RcB-5v-cB5" secondAttribute="top" id="7zw-7t-YeZ"/>
+                            <constraint firstItem="USi-hF-cFT" firstAttribute="bottom" secondItem="RcB-5v-cB5" secondAttribute="bottom" id="9em-Vk-NDS"/>
+                            <constraint firstItem="USi-hF-cFT" firstAttribute="centerX" secondItem="1lL-eN-E24" secondAttribute="centerX" id="SIC-hO-R9g"/>
+                            <constraint firstItem="USi-hF-cFT" firstAttribute="leading" secondItem="RcB-5v-cB5" secondAttribute="leading" id="frm-vZ-LUT"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="Searchbar" destination="vpi-Bz-vDj" id="kYh-q0-KzG"/>
                         <outlet property="tableView" destination="USi-hF-cFT" id="ffr-R7-shC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cbz-8W-bvV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1180" y="2394"/>
+            <point key="canvasLocation" x="1180" y="2393.2533733133437"/>
         </scene>
         <!--Edit Detail Controller-->
         <scene sceneID="L5v-up-frt">
@@ -1090,14 +1079,14 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IngredientTableCell" id="0lb-vf-uML" customClass="IngredientTableCell" customModule="YumFun" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="335" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="335" height="43"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0lb-vf-uML" id="hTJ-az-6p8">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Edo-ue-ced">
-                                                    <rect key="frame" x="26" y="11" width="120" height="21.5"/>
+                                                    <rect key="frame" x="26" y="11" width="120" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="120" id="noC-UV-VY2"/>
                                                     </constraints>
@@ -1106,7 +1095,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfC-f3-L5q">
-                                                    <rect key="frame" x="156" y="11" width="143" height="21.5"/>
+                                                    <rect key="frame" x="156" y="11" width="143" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
